kubernetes/apps/database/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  ingressClassName: cilium
  rules:
    - host: emqx-dashboard.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
  tls:
    - hosts:
      - emqx-dashboard.${CLUSTER_DOMAIN}
      secretName: onedev-tls-certificate
